<package>
  <name>msl_gazebo_control</name>
  <version>0.0.1</version>
  <description>msl_gazebo_control provides a GUI plugin spawning and deleting models from the msl_gazebo_simulator.</description>
  <maintainer email="opfer@vs.uni-kassel.de">Stephan Opfer</maintainer>

  <license>MIT</license>

  <author>Stephan Opfer</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_cpp</build_depend>

  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_cpp</run_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
