<?xml version="1.0"?>
<package>
  <name>msl_gazebo_sim_link</name>
  <version>0.0.0</version>
  <description>The msl_gazebo_sim_link package</description>

  <maintainer email="s.jakob872@gmail.com">Stefan Jakob</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>msl_msgs</build_depend>
  <build_depend>system_config</build_depend>

  <run_depend>msl_msgs</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>system_config</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
	<!--<gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />-->
  </export>
</package>
